--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -3,9 +3,12 @@
 
 	<string name="app_name">Турбофильм</string>
 
+	<string name="cancel">Отмена</string>
+
 	<string name="auth_login_label">Логин:</string>
 	<string name="auth_pass_label">Пароль:</string>
 	<string name="auth_signin_button">Впустите меня</string>
+
 	<string name="season_text">Сезон %d</string>
 
 </resources>
